; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_worktree.c_delete_git_dir.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_worktree.c_delete_git_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [13 x i8] c"worktrees/%s\00", align 1
@errno = common dso_local global i64 0, align 8
@ENOTDIR = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"failed to delete '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @delete_git_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delete_git_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.strbuf, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @git_common_path(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %6)
  %8 = call i32 @strbuf_addstr(%struct.strbuf* %3, i32 %7)
  %9 = call i32 @remove_dir_recursively(%struct.strbuf* %3, i32 0)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %1
  %13 = load i64, i64* @errno, align 8
  %14 = load i64, i64* @ENOTDIR, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @unlink(i32 %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %12, %1
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %20
  %24 = call i32 @_(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %25 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @error_errno(i32 %24, i32 %26)
  br label %28

28:                                               ; preds = %23, %20
  %29 = call i32 @strbuf_release(%struct.strbuf* %3)
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i32) #2

declare dso_local i32 @git_common_path(i8*, i8*) #2

declare dso_local i32 @remove_dir_recursively(%struct.strbuf*, i32) #2

declare dso_local i32 @unlink(i32) #2

declare dso_local i32 @error_errno(i32, i32) #2

declare dso_local i32 @_(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
